working pid ff masion macich!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
       "name": "SysidApp",
       "request": "launch",
       "mainClass": "frc.demacia.sysID.SysidApp",
+      "projectName": "Season2026-3"
+    },
+    {
+      "type": "java",
+      "name": "SysidApp",
+      "request": "launch",
+      "mainClass": "frc.demacia.sysID.SysidApp",
       "projectName": "Season2026-Imported"
     },
     {
